# projekt_zespolowy_OKNO

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
doc/: Gra_FPS_wstępne_założenia.docx  MaLe_Raport_Doom.docx  MaLe_Raport_Doom.md  Raport Final.docx  Raport.docx  Raport_Projekt_Zespołowy_grupa gra FPS w stylu DOOM93.docx  ~$Le_Raport_Doom.docx  ~$Raport.docx  ~$port Final.docx  ~WRL2339.tmp
include/: Actor.h  CollisionSolver.h  Enemy.h  Fist.h  Game.h  Menu.h  Object.h  Painter2D.h  Pistol.h  Player.h  Weapon.h
include/core/: core.h
include/core/ecs/: ComponentArray.h  ComponentBase.h  ComponentManager.h  ECSManager.h  Entity.h  EntityManager.h  System.h  SystemManager.h
include/core/engine/: BSP.h  GameEngine.h  GameLevel.h  InputManager.h
include/core/loaders/: WADLoader.h
include/core/logger/: Logger.h
include/core/math/: collisions.h  utilities.h
include/game/components/: CollectableComponent.h  ControllableComponent.h  DamageComponent.h  EnemyComponent.h  GameDrawableComponent.h  HealthComponent.h  MinimapSpriteComponent.h  PlayerStateComponent.h  SpriteComponent.h  TargetComponent.h  TransformComponent.h  WeaponComponent.h
include/game/drawable/: GameDrawable.h  LevelDrawable.h
include/game/sprites/: CollectableMinimapSprite.h  EnemyMinimapSprite.h  LevelMinimapSprite.h  MinimapSprite.h  PlayerMinimapSprite.h
include/game/systems/: CollectableSystem.h  DamageSystem.h  EnemySystem.h  EnviromentDamageSystem.h  PlayerControllSystem.h  PlayerMovementSystem.h  PlayerSystem.h  WeaponSystem.h
include/game/systems/rendering/: GameRenderingSystem.h  HUDRenderingSystem.h  MinimapRenderingSystem.h
src/: Actor.cpp  CollisionSolver.cpp  Enemy.cpp  Game.cpp  Menu.cpp  Object.cpp  Painter2D.cpp  Player.cpp  main.cpp
src/core/: core.cpp
src/core/ecs/: EntityManager.cpp
src/core/engine/: GameEngine.cpp  InputManager.cpp
src/core/loaders/: WADLoader.cpp
src/core/logger/: Logger.cpp
src/core/math/: colissions.cpp  utilities.cpp
src/game/drawable/: LevelDrawable.cpp
src/game/sprites/: CollectableMinimapSprite.cpp  EnemyMinimapSprite.cpp  LevelMinimapSprite.cpp  PlayerMinimapSprite.cpp
